storage/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: storage-np
  namespace: linguist-system-backend
spec:
  podSelector:
    matchLabels:
      app: storage
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: connector
    - podSelector:
        matchLabels:
          app: frequences
    - podSelector:
        matchLabels:
          app: intonation-contour
    - podSelector:
        matchLabels:
          app: markers
  policyTypes:
  - Ingress
